<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"


    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/department_list"


        android:background="@color/blue_dark"

        android:gravity="center_horizontal"
        android:textColor="@color/white"
android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"/>
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/SelectRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip">
        <RadioButton
            android:id="@+id/categoryAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/all" />
        <RadioButton
        android:id="@+id/categoryA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
        android:text="@string/animals_amp_pet_supplies" />
        <RadioButton
            android:id="@+id/categoryB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/apparel_amp_accessories" />
        <RadioButton
            android:id="@+id/categoryC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/arts_amp_entertainment"/>
        <RadioButton
            android:id="@+id/categoryD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/baby_amp_toddler"/>
        <RadioButton
            android:id="@+id/categoryE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/business_amp_industrial"/>
        <RadioButton
            android:id="@+id/categoryF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/cameras_amp_optics"/>
        <RadioButton
            android:id="@+id/categoryG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/electronics"/>
        <RadioButton
            android:id="@+id/categoryH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/food_beverages_amp_tobacco"/>
        <RadioButton
            android:id="@+id/categoryI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/furniture"/>
        <RadioButton
            android:id="@+id/categoryJ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/hardware"/>
        <RadioButton
            android:id="@+id/categoryK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/health_amp_beauty"/>
        <RadioButton
            android:id="@+id/categoryL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/home_amp_garden"/>
        <RadioButton
            android:id="@+id/categoryM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/luggage_amp_bags"/>
        <RadioButton
            android:id="@+id/categoryN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/mature"/>
        <RadioButton
            android:id="@+id/categoryO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/media"/>
        <RadioButton
            android:id="@+id/categoryP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/office_supplies"/>
        <RadioButton
            android:id="@+id/categoryQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/religious_amp_ceremonial"/>
        <RadioButton
            android:id="@+id/categoryR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/software"/>
        <RadioButton
            android:id="@+id/categoryS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/sporting_goods"/>
        <RadioButton
            android:id="@+id/categoryT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/toys_amp_games"/>
        <RadioButton
            android:id="@+id/categoryU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:text="@string/vehicles_amp_parts"/>
    </RadioGroup>
    </ScrollView>

</LinearLayout>