<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/newLoginLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/newLoginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SmrtCrt"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dip"
        />
    <TextView
        android:layout_below="@id/newLoginLogo"
        android:id="@+id/newLoginText"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="20dip"
        android:layout_width="275dip"
        android:layout_height="wrap_content"
        android:text="@string/find_new_stores_and_products"
        android:textColor="@color/white"
        android:fontFamily="@string/common_google_play_services_enable_text"/>
    <TextView
        android:layout_below="@id/newLoginText"
        android:id="@+id/newLoginText2"
        android:layout_marginLeft="20dip"
        android:layout_width="275dip"
        android:layout_height="wrap_content"
        android:text="@string/shop_smart_at_smrtcrt"
        android:textColor="@color/white"
        android:fontFamily="@string/common_google_play_services_enable_text"/>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:orientation="vertical">

        <Button
            android:id="@+id/newLoginSigninButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_width="250dip"
            android:layout_height="45dip"
            android:text = "@string/sign_in"
            android:textSize="15sp"
            android:textColor="@color/black_overlay"
            android:textAllCaps="false"
            android:onClick="logInDialogue"
            android:backgroundTint="@color/colorSilver"/>
        <Button
            android:id="@+id/newLoginGuestButton"
            android:layout_gravity="center_horizontal"

            android:layout_width="250dip"
            android:layout_height="45dip"
            android:text = "@string/use_as_guest_user"
            android:textColor="@color/black_overlay"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:onClick="enterBackDoor"
            android:backgroundTint="@color/colorSilver"/>
        <Button
            android:layout_marginLeft="20dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/languagewhite"
            android:text="@string/language_setting"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="9sp"
            android:background="@color/transparent"
            android:layout_gravity="bottom"
            android:onClick="loginChangeLanguage"/>

    </LinearLayout>

</RelativeLayout>


